kodekloud_mock_exam/ME1/8_busybox_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-dns
spec:
  containers:
  - name: busybox
    image: busybox:1.28
    command: ['sh', '-c', 'echo "Hello, Kubernetes!" && sleep 3600']
