kodekloud_mock_exam/ME1/8_nginx-resolver-cka06-svcn.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-resolver-cka06-svcn
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
