kodekloud_mock_exam/ME1/6_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-route
spec:
  parentRefs:
  - name: web-gateway
  hostnames:
  - "cluster2-controlplane"
  rules:
  - backendRefs:
    - name: web-service
      port: 80
